# algonds

./: Cargo.toml  README.md  solution.py
src/: application.rs  arguments.rs  complexity.rs  data.rs  interface.rs  main.rs  processes.rs  structure.rs  test.rs
src/application/: common.rs  controller.rs  input_handler.rs  model.rs  settings.rs  test_runner.rs  test_suite.rs  ui.rs  view.rs
src/application/controller/: input_controller.rs  problem_screen_controller.rs  select_screen_controller.rs
src/application/test_runner/: code_runner.rs  remote_runner.rs  runnable_test_case.rs  test_case_io.rs
src/application/ui/: available_problems.rs  commands.rs  full_problem.rs  help.rs  last_test_case.rs  layouts.rs  performance.rs  problem_view.rs  test_case_details.rs  test_case_table.rs
src/application/ui/layouts/: help_menu.rs  help_menu_layout.rs  problem_layout.rs  problem_menu_layout.rs  select_menu.rs  select_menu_layout.rs  solve_menu.rs
src/complexity/: functions.rs  verify.rs
src/data/: db.yaml  test_case_generators.rs
src/structure/: common.rs  controller.rs  model.rs  runner.rs  settings.rs  ui.rs  view.rs
src/structure/controller/: input_controller.rs  problem_screen_controller.rs  select_screen_controller.rs
src/structure/ui/: available_problems.rs  commands.rs  full_problem.rs  help.rs  last_test_case.rs  layouts.rs  problem_view.rs  test_case_table.rs
src/structure/ui/layouts/: help_menu.rs  problem_layout.rs  select_menu.rs  solve_menu.rs
