[package]
name = "algonds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
tui = "0.18.0"
crossterm = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
minreq = { version = "2.6.0", features = ["punycode", "https"] }
linreg = "0.2.0"
